test/conformance/chainsaw/cli/apply/warn-exit-code-vpol/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  containers:
    - name: app
      image: nginx
