test/conformance/chainsaw/cli/apply/warn-exit-code-vpol/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: warn-exit-code-vpol
spec:
  concurrent: false
  steps:
    - try:
      - script:
          content: |
            kyverno apply policy.yaml --resource resource.yaml --audit-warn --warn-exit-code 3
          check:
            ($error): "exit status 3"
